--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
 <input type="password" id="password" name="password">
 </div>
 <div>
-<label for="phone">Phone no: </label>
+<label for="phone">Phone number: </label>
 </div>
 <div>
 <input type="text" id="phone" name="phone">
